--- a/movie_app/pubspec.yaml
+++ b/movie_app/pubspec.yaml
@@ -37,7 +37,7 @@ dependencies:
   flutter_bloc: ^8.1.1
   http: ^0.13.5
   shared_preferences: ^2.0.15
-  form_validator: ^1.0.2
+  bloc: ^8.1.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
