--- a/movie_app/pubspec.yaml
+++ b/movie_app/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   http: ^0.13.5
   shared_preferences: ^2.0.15
   bloc: ^8.1.0
+  equatable: ^2.0.5
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
